# Optimization

./: .gitignore  README.md
Exercises/: CMakeLists.txt  exercise3_1.cpp
Notes/: Chapter 2.1 Notes - Definitions of Solutions.md  Chapter 2.2 Notes - Line Search & Trust Region Overview.md  Chapter 3.1 Notes - Step Length.md
